--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@public_images/*": ["./public/assets/images/*"],
       "@shared/*": ["./src/shared/*"],
       "@images/*": ["./src/shared/assets/images/*"],
       "@entities/*": ["./src/entities/*"],
