fix: change router for gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https//Ragna13377.github.io/",
+  "homepage": "https://Ragna13377.github.io/swapi",
   "name": "react-webpack",
   "version": "1.0.1",
   "description": "",
